[package]
name = "home_delivery"
version = "1.0.0"
edition = "2021"
authors = ["Rob Hansen <rob@hansen.engineering>"]
license = "Apache 2.0"
license-file = "LICENSE.txt"
readme = "README.md"
description = "Moves files between two directories on a schedule"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
log = { version = "0.4.25" }
log4rs = { version = "1.3.0" }
regex = { version = "1.11.1" }
lazy_static = "1.5.0"
chrono = "0.4.39"