[package]
name = "home_delivery"
version = "1.1.0"
edition = "2021"
authors = ["Rob Hansen <rob@hansen.engineering>"]
license = "Apache-2.0"
readme = "README.md"
description = "Moves files between two directories on a schedule"
homepage = "https://github.com/rjhansen/home_delivery"
repository = "https://github.com/rjhansen/home_delivery.git"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
log4rs = "1.3"
regex = "1.11"
lazy_static = "1.5"
chrono = "0.4"

[[bin]]
name = "home_delivery"

